--- a/EXE201/EXE201/EXE201/EXE201/FE/index.html
+++ b/EXE201/EXE201/EXE201/EXE201/FE/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/Logo1.png" />
-  <title>Diable</title>
+  <title>Diabecare</title>
 </head>
 
 <body>
